--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-quill": "^1.3.5",
     "react-rater": "^5.1.1",
     "react-redux": "^7.2.2",
+    "react-router": "^6.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.3",
     "react-scroll": "^1.8.1",
